# term-project

search/: CMakeLists.txt  data_base.cpp  data_base.h  main.cpp  search.htm  search_server.ini  server.cpp  server.h  server_interface.cpp  server_interface.h
spider/: CMakeLists.txt  Regex_rest2.cpp  data_base.h  html_parser — копия.cpp  html_parser.cpp  html_parser.h  http_client_async.cpp  http_client_async_ssl.cpp  http_req.cpp  http_req.h  https_req.cpp  https_req.h  ini_parser.h  main.cpp  parser_exceptions.h  spider.cpp  spider.h  spider.ini  spider_data.h  tasks_queue.cpp  tasks_queue.h  urls_thread_pool.cpp  urls_thread_pool.h  user_interface - copy.cpp
spider/async_client_test/: CMakeLists.txt  boost_beast_async_client_http.cpp
spider/copy 25-10-2024/: data_base.cpp  html_parser — копия.h  html_parser.cpp  html_parser.h  http_req.cpp  http_req.h  https_req.cpp  https_req.h  ini_parser.cpp  ini_parser.h  main.cpp  spider.cpp  spider.h  spider_data.h  tasks_queue.h  urls_thread_pool.cpp  urls_thread_pool.h  user_interface - copy.h
